Updated Customer and DataBase name

--- a/ASPPenguinWings/appsettings.json
+++ b/ASPPenguinWings/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ASPPenguinWings-3891448b-f228-4e52-ab8c-15f75f277445;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PenguinWings;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
